--- a/src/index.css
+++ b/src/index.css
@@ -29,19 +29,19 @@
 
 body.dark {
   --primary-1: #a4161a;
-  --primary-2: rgb(229, 56, 59);
-  --primary-3: rgb(255, 83, 85);
+  --primary-2: #E84A4D;
+  --primary-3: #ff5355;
   --bg-primary-1: rgb(22, 26, 29);
   --bg-primary-1-shadow: rgba(2,12,27,0.7);
   --bg-primary-1-transparent: rgba(22, 26, 29, 0.8);
   --bg-primary-2: #1c191a;
-  --bg-primary-3: #31272a;
+  --bg-primary-3: #352e30;
   --bg-primary-4: rgb(33, 39, 44);
   --bg-primary-4-shadow: rgba(15, 1, 1, 0.8);
   --bg-secondary-1: #f3f3f3;
   --f-primary-1: #e6f1ff;
   --f-primary-2: #8892b0;
-  --f-primary-3: #697188;
+  --f-primary-3: #858ea7;
   --f-primary-4: #444857;
   --f-primary-5: #a1acce;
 }
@@ -64,7 +64,6 @@ body.light {
   --f-primary-4: #444857;
   --f-primary-5: #484d5a;
 }
-
 
 /* Track */
 body.light::-webkit-scrollbar-track {
